permission changed in buildspec

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,23 +4,20 @@ phases:
   install:
     runtime-versions:
       java: corretto8
-  pre_build:
     commands:
-      - echo Initializing environment
-      # - export CODEARTIFACT_AUTH_TOKEN=`aws codeartifact get-authorization-token --domain nextwork --domain-owner 123456789012 --region us-east-2 --query authorizationToken --output text`
-
+      - echo Using Amazon Corretto 8
+      - mvn --version
   build:
     commands:
       - echo Build started on `date`
-      - mvn -s settings.xml compile
+      - mvn clean package
   post_build:
     commands:
       - echo Build completed on `date`
-      - mvn -s settings.xml package
+
 artifacts:
   files:
-    - target/nextwork-web-project.war
-  discard-paths: no
+    - target/*.war   # or *.war if your pom.xml uses <packaging>war</packaging>
 cache:
   paths:
     - '/root/.m2/**/*'
