--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,6 +19,10 @@ phases:
 artifacts:
   files:
     - target/nextwork-web-project.war
+    - appspec.yml
+    - scripts/**/*
+  discard-paths: no
+
 cache:
   paths:
     - '/root/.m2/**/*'
